# openenclave-ECIES-secp256k1

./: CMakeLists.txt  Makefile  README.md  enclave.edl  evm_enclave_headfile.h  out.encrypted  taint.json
enclave/: CMakeLists.txt  Makefile  enclave_ecalls.cpp  fileencryptor_args.h  fileencryptor_t.c  fileencryptor_t.h  myBigInt.hpp  opcode.h  private.pem  public.pem
enclave/common/: encryptor.h
enclave/mbedtls_src/: ecp_encryptor.cpp  encryptor.cpp
enclave/openssl_src/: ecp_encryptor.cpp  enclave_ecalls.cpp  encryptor.cpp  myKeccak256.hpp
enclave/openssl_src/ecp/: Blob.h  ECDSAKey.cpp  ECDSAKey.h  ECIES.cpp  ECIES.h  contract.cpp  contract.h  ec_key.cpp  ec_key.h  type_name.h
example_other/: ERC20_combined.json
host/: CMakeLists.txt  Makefile  bigint.h  div.cpp  div.hpp  enclave_host.cpp  file-encryptorhost  fileencryptor_u.c  fileencryptor_u.h  main_erc20.cpp  processor.cpp  processor.h  rlp.h  util.cpp  util.h
host/fmt/: core.h
host/intx/: int128.hpp  intx.hpp
host/keccak/: KeccakHash.c  KeccakP-1600-opt64.c  KeccakSpongeWidth1600.c  SimpleFIPS202.c
host/nlohmann/: json.hpp
